# epeiros

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  lint.yml
src/: io.rs  lib.rs
src/fs/: header.rs  mod.rs
src/fs/types/: item.rs  mod.rs  sdata.rs  skilldata.rs  text.rs
src/protocol/: client.rs  mod.rs  server.rs
src/protocol/client/: handshake.rs  login.rs
src/protocol/server/: handshake.rs  login.rs  serverlist.rs
